--- a/solve_cutting_stock_problem.ipynb
+++ b/solve_cutting_stock_problem.ipynb
@@ -12,59 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "id": "google",
-      "metadata": {
-        "id": "google"
-      },
-      "source": [
-        "##### Copyright 2022 Google LLC."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "apache",
-      "metadata": {
-        "id": "apache"
-      },
-      "source": [
-        "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-        "you may not use this file except in compliance with the License.\n",
-        "You may obtain a copy of the License at\n",
-        "\n",
-        "    http://www.apache.org/licenses/LICENSE-2.0\n",
-        "\n",
-        "Unless required by applicable law or agreed to in writing, software\n",
-        "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "See the License for the specific language governing permissions and\n",
-        "limitations under the License.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "basename",
       "metadata": {
         "id": "basename"
       },
       "source": [
-        "# solve_with_time_limit_sample_sat"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "link",
-      "metadata": {
-        "id": "link"
-      },
-      "source": [
-        "<table align=\"left\">\n",
-        "<td>\n",
-        "<a href=\"https://colab.research.google.com/github/google/or-tools/blob/main/examples/notebook/sat/solve_with_time_limit_sample_sat.ipynb\"><img src=\"https://raw.githubusercontent.com/google/or-tools/main/tools/colab_32px.png\"/>Run in Google Colab</a>\n",
-        "</td>\n",
-        "<td>\n",
-        "<a href=\"https://github.com/google/or-tools/blob/main/ortools/sat/samples/solve_with_time_limit_sample_sat.py\"><img src=\"https://raw.githubusercontent.com/google/or-tools/main/tools/github_32px.png\"/>View source on GitHub</a>\n",
-        "</td>\n",
-        "</table>"
+        "# Solve cutting problem"
       ]
     },
     {
@@ -82,11 +35,11 @@
       "execution_count": 1,
       "id": "install",
       "metadata": {
-        "id": "install",
-        "outputId": "f51e00bb-edb5-4a9f-f764-947654533122",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "install",
+        "outputId": "f51e00bb-edb5-4a9f-f764-947654533122"
       },
       "outputs": [
         {
@@ -127,7 +80,7 @@
       },
       "source": [
         "\n",
-        "Solves a problem with a time limit.\n"
+        "Solves a problem in which various lengths of wood must be cut with minimal waste from longer lengths of wood. https://en.wikipedia.org/wiki/Cutting_stock_problem\n"
       ]
     },
     {
@@ -135,11 +88,11 @@
       "execution_count": 4,
       "id": "code",
       "metadata": {
-        "id": "code",
-        "outputId": "eb0e5518-d00c-4d5d-b241-27913dc5ff41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "code",
+        "outputId": "eb0e5518-d00c-4d5d-b241-27913dc5ff41"
       },
       "outputs": [
         {
@@ -187,9 +140,11 @@
         "def create_data_model():\n",
         "    \"\"\"Create the data for the example.\"\"\"\n",
         "    data = {}\n",
+        "    # These are the lengths you want to cut\n",
         "    weights = [910, 837.8, 773.2, 716.2, 666.8, 625, 590.8, 564.2, 545.2, 533.8, 530, 533.8, 545.2, 564.2, 590.8, 625, 666.8, 716.2, 773.2, 837.8, 910]\n",
         "    data['weights'] = weights\n",
         "    data['items'] = list(range(len(weights)))\n",
+        "    # These are the stock you have available\n",
         "    data['bin_capacity'] = [2400, 2400, 2400, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800]\n",
         "    data['bins'] = list(range(len(data['bin_capacity'])))\n",
         "    return data\n",
