Fixed blade width

--- a/solve_cutting_stock_problem.ipynb
+++ b/solve_cutting_stock_problem.ipynb
@@ -17,7 +17,9 @@
         "id": "basename"
       },
       "source": [
-        "# Solve cutting problem"
+        "# Solve cutting problem\n",
+        "\n",
+        "Solves a problem in which various lengths of wood must be cut with minimal waste from longer lengths of wood. https://en.wikipedia.org/wiki/Cutting_stock_problem"
       ]
     },
     {
@@ -55,51 +57,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "id": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "code",
-        "outputId": "eb0e5518-d00c-4d5d-b241-27913dc5ff41"
+        "outputId": "87493346-0370-442f-c183-ce9d623293d9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Bin number 0\n",
-            "  Items packed: [3, 6, 11, 12]\n",
-            "  Total weight: 2386.0\n",
+            "Stock number 0\n",
+            "  Items packed: [1, 2, 18]\n",
+            "  Lengths cut: [837.8, 773.2, 773.2]\n",
+            "  Total length used: 2390.2 out of 2400\n",
             "\n",
-            "Bin number 1\n",
-            "  Items packed: [2, 17, 20]\n",
-            "  Total weight: 2399.4\n",
+            "Stock number 1\n",
+            "  Items packed: [0, 15, 19]\n",
+            "  Lengths cut: [910, 625, 837.8]\n",
+            "  Total length used: 2378.8 out of 2400\n",
             "\n",
-            "Bin number 2\n",
-            "  Items packed: [4, 8, 10, 15]\n",
-            "  Total weight: 2367.0\n",
+            "Stock number 2\n",
+            "  Items packed: [5, 8, 13, 14]\n",
+            "  Lengths cut: [625, 545.2, 564.2, 590.8]\n",
+            "  Total length used: 2334.2 out of 2400\n",
             "\n",
-            "Bin number 5\n",
-            "  Items packed: [0, 18]\n",
-            "  Total weight: 1683.2\n",
+            "Stock number 6\n",
+            "  Items packed: [17, 20]\n",
+            "  Lengths cut: [716.2, 910]\n",
+            "  Total length used: 1629.2 out of 1800\n",
             "\n",
-            "Bin number 8\n",
-            "  Items packed: [7, 13, 16]\n",
-            "  Total weight: 1795.2\n",
+            "Stock number 7\n",
+            "  Items packed: [7, 12, 16]\n",
+            "  Lengths cut: [564.2, 545.2, 666.8]\n",
+            "  Total length used: 1782.2 out of 1800\n",
             "\n",
-            "Bin number 9\n",
-            "  Items packed: [5, 9, 14]\n",
-            "  Total weight: 1749.6\n",
+            "Stock number 10\n",
+            "  Items packed: [3, 9, 10]\n",
+            "  Lengths cut: [716.2, 533.8, 530]\n",
+            "  Total length used: 1786.0 out of 1800\n",
             "\n",
-            "Bin number 11\n",
-            "  Items packed: [1, 19]\n",
-            "  Total weight: 1675.6\n",
+            "Stock number 11\n",
+            "  Items packed: [4, 6, 11]\n",
+            "  Lengths cut: [666.8, 590.8, 533.8]\n",
+            "  Total length used: 1797.3999999999999 out of 1800\n",
             "\n",
             "\n",
-            "Number of bins used: 7\n",
-            "Time =  1399  milliseconds\n"
+            "Number of stock used: 7\n",
+            "Time =  5475  milliseconds\n"
           ]
         }
       ],
@@ -111,12 +120,13 @@
         "    \"\"\"Create the data for the example.\"\"\"\n",
         "    data = {}\n",
         "    # These are the lengths you want to cut\n",
-        "    weights = [910, 837.8, 773.2, 716.2, 666.8, 625, 590.8, 564.2, 545.2, 533.8, 530, 533.8, 545.2, 564.2, 590.8, 625, 666.8, 716.2, 773.2, 837.8, 910]\n",
-        "    data['weights'] = weights\n",
-        "    data['items'] = list(range(len(weights)))\n",
+        "    lengths = [910, 837.8, 773.2, 716.2, 666.8, 625, 590.8, 564.2, 545.2, 533.8, 530, 533.8, 545.2, 564.2, 590.8, 625, 666.8, 716.2, 773.2, 837.8, 910]\n",
+        "    data['lengths'] = lengths\n",
+        "    data['items'] = list(range(len(lengths)))\n",
         "    # These are the stock you have available\n",
-        "    data['bin_capacity'] = [2400, 2400, 2400, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800]\n",
-        "    data['bins'] = list(range(len(data['bin_capacity'])))\n",
+        "    data['stock_lengths'] = [2400, 2400, 2400, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800]\n",
+        "    data['cut_width'] = 3 #how many mm the saw takes out of the stock.\n",
+        "    data['stock'] = list(range(len(data['stock_lengths'])))\n",
         "    return data\n",
         "\n",
         "\n",
@@ -131,51 +141,53 @@
         "        return\n",
         "\n",
         "    # Variables\n",
-        "    # x[i, j] = 1 if item i is packed in bin j.\n",
+        "    # x[i, j] = 1 if item i is packed in stock j.\n",
         "    x = {}\n",
         "    for i in data['items']:\n",
-        "        for j in data['bins']:\n",
+        "        for j in data['stock']:\n",
         "            x[(i, j)] = solver.IntVar(0, 1, 'x_%i_%i' % (i, j))\n",
         "\n",
-        "    # y[j] = 1 if bin j is used.\n",
+        "    # y[j] = 1 if stock j is used.\n",
         "    y = {}\n",
-        "    for j in data['bins']:\n",
+        "    for j in data['stock']:\n",
         "        y[j] = solver.IntVar(0, 1, 'y[%i]' % j)\n",
         "\n",
         "    # Constraints\n",
-        "    # Each item must be in exactly one bin.\n",
+        "    # Each item must be in exactly one stock.\n",
         "    for i in data['items']:\n",
-        "        solver.Add(sum(x[i, j] for j in data['bins']) == 1)\n",
+        "        solver.Add(sum(x[i, j] for j in data['stock']) == 1)\n",
         "\n",
-        "    # The amount packed in each bin cannot exceed its capacity.\n",
-        "    for j in data['bins']:\n",
+        "    # The amount packed in each stock_length cannot exceed its capacity.\n",
+        "    for j in data['stock']:\n",
         "        solver.Add(\n",
-        "            sum(x[(i, j)] * data['weights'][i] for i in data['items']) <= y[j] *\n",
-        "            data['bin_capacity'][j])\n",
+        "            sum(x[(i, j)] * (data['lengths'][i] + data['cut_width']) for i in data['items']) - data['cut_width'] <= y[j] *\n",
+        "            data['stock_lengths'][j])\n",
         "\n",
-        "    # Objective: minimize the number of bins used.\n",
-        "    solver.Minimize(solver.Sum([y[j] for j in data['bins']]))\n",
+        "    # Objective: minimize the number of stock used.\n",
+        "    solver.Minimize(solver.Sum([y[j] for j in data['stock']]))\n",
         "\n",
         "    status = solver.Solve()\n",
         "\n",
         "    if status == pywraplp.Solver.OPTIMAL:\n",
-        "        num_bins = 0\n",
-        "        for j in data['bins']:\n",
+        "        num_stock = 0\n",
+        "        for j in data['stock']:\n",
         "            if y[j].solution_value() == 1:\n",
-        "                bin_items = []\n",
-        "                bin_weight = 0\n",
+        "                stock_items = []\n",
+        "                stock_length_used = 0\n",
         "                for i in data['items']:\n",
         "                    if x[i, j].solution_value() > 0:\n",
-        "                        bin_items.append(i)\n",
-        "                        bin_weight += data['weights'][i]\n",
-        "                if bin_items:\n",
-        "                    num_bins += 1\n",
-        "                    print('Bin number', j)\n",
-        "                    print('  Items packed:', bin_items)\n",
-        "                    print('  Total weight:', bin_weight)\n",
+        "                        stock_items.append(i)\n",
+        "                        stock_length_used += data['lengths'][i] \n",
+        "                stock_length_used += (len(stock_items) - 1) * data['cut_width']\n",
+        "                if stock_items:\n",
+        "                    num_stock += 1\n",
+        "                    print('Stock number', j)\n",
+        "                    print('  Items packed:', stock_items)\n",
+        "                    print('  Lengths cut:', [data[\"lengths\"][k] for k in stock_items])\n",
+        "                    print(f'  Total length used: {stock_length_used} out of {data[\"stock_lengths\"][j]}')\n",
         "                    print()\n",
         "        print()\n",
-        "        print('Number of bins used:', num_bins)\n",
+        "        print('Number of stock used:', num_stock)\n",
         "        print('Time = ', solver.WallTime(), ' milliseconds')\n",
         "    else:\n",
         "        print('The problem does not have an optimal solution.')\n",
